--- a/.github/workflows/python_func_tests.yaml
+++ b/.github/workflows/python_func_tests.yaml
@@ -26,8 +26,8 @@ jobs:
           sudo pip3 install pyyaml jinja2 f90nml
           sudo pip3 install numpy matplotlib basemap
 
-      # Run python unittests
-      - name: Run python unittests
+      # Run python functional tests
+      - name: Run python functional tests
         run: |
           cd ush
           python3 -m unittest -b test_retrieve_data.FunctionalTesting
